--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
-    "jwt-token": "^1.0.9",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "nodemailer": "^6.10.1"
   }
